# ruly

./: .gitignore  Cargo.toml
src/: main.rs
