[package]
name = "ruly"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = {version="0.1.5", features=["backtrace"]}
derivative = "1.0.3"
